# crypto

./: .gitignore  Cargo.toml  README.md
.husky/hooks/: pre-commit
src/: errors.rs  lib.rs  types.rs
src/aead/: aead.rs  key.rs  mod.rs  types.rs
src/ecdh/: ecdh.rs  keypair.rs  mod.rs  pubkey.rs  secret.rs  types.rs
src/eddsa/: eddsa.rs  keypair.rs  mod.rs  privkey.rs  pubkey.rs  signature.rs  types.rs
src/keysecure/: base.rs  builder.rs  keysecure.rs  mod.rs  objects.rs  types.rs
src/passphrase/: kdf_params.rs  mod.rs  passphrase.rs  salt.rs  types.rs
