[package]
name = "prople-crypto"
version = "1.0.0"
edition = "2021"
authors = ["rstlix0x0 <rstlix.dev@gmail.com>"]
repository = "https://github.com/prople/crypto"
rust-version = "1.74"
description = "A set of libraries and function helpers to maintain cryptography data"
license = "GPL-3.0-only"
keywords = ["prople", "cryptography"]
categories = ["cryptography"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rst-common = {version = "1.1.0", features = ["standard", "with-errors", "with-cryptography"]}
thiserror = {version = "1.0.57"}
serde = {"version" = "~1", features = ["derive"] }
serde_json = {"version" = "~1"}
